# voxtree

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 887hpp8a2i99n9jjwcvz6qkhhhqsvzkg-source  ci587bjs2dwcsw6v5gykpl7sxvnqx6xh-source  gsif96m93kai5bx7qi0v9f9451q1b1ai-source  j8pbrsb3nybdap3hhg9kw0ffqd4rlbx6-source  jv2dsk66mh98axhg1cp1a1gzvj2alxph-source  v9dvfkr6rpl1dh02b4lyjx0gzwkiwvk3-source  vqv069h13i5vdifjv3zlmw04s6jqvk4p-source
src/: lib.rs  node.rs  packed.rs  voxtree.rs
