[package]
authors = ["hex.execute"]
name = "voxtree"
description = "A sparse voxel octree for rust & rust-gpu."
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"

[features]
no_std = []
