[package]
authors = ["hex.execute"]
name = "voxtree"
description = "A sparse voxel octree for rust & rust-gpu."
version = "0.1.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/HexExecute/voxtree"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.18.0", optional = true }

[features]
default = ["std"]
std = ["dep:cgmath"]
